Cambio de prueba

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenido a Scrubia</h1>
-        <p>Uniformes médicos con estilo y precisión.</p>
+        <h1>Ufas trufas </h1>
+        <p>Podemos poner lo que queramos aqui.</p>
     </header>
     <main>
         <section>
